# CiteCoach

./: .gitignore  Architecture.html  README.md  Wireframes.html  codemagic.yaml  logo.html  pubspec.yaml
.github/workflows/: build-android.yml
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  llm_bridge.cpp  llm_stub.cpp
docs/: react-native-vs-flutter-comparison.md
ios/Runner/: AppDelegate.swift  Info.plist  LlmPlugin.swift  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard
lib/: app.dart  main.dart
lib/core/: core.dart
lib/core/constants/: app_colors.dart  app_dimensions.dart  app_strings.dart  constants.dart
lib/core/database/: database.dart  database_provider.dart  migrations.dart
lib/core/database/tables/: chat_messages_table.dart  document_chunks_table.dart  document_pages_table.dart  documents_table.dart  question_cache_table.dart  tables.dart
lib/core/ml/: tokenizer.dart
lib/core/preferences/: user_preferences.dart
lib/core/services/: battery_service.dart  model_files.dart  network_service.dart  services.dart  storage_service.dart
lib/core/theme/: app_theme.dart  app_theme_data.dart  theme_provider.dart  theme_variant.dart
lib/core/widgets/: bottom_nav_bar.dart  gradient_button.dart  kinetic_logo.dart  loading_indicator.dart  widgets.dart
lib/features/chat/: chat.dart
lib/features/chat/data/: chat_repository.dart  llm_service.dart  rag_service.dart
lib/features/chat/domain/: chat_message.dart
lib/features/chat/presentation/: chat_screen.dart
lib/features/chat/providers/: chat_provider.dart
lib/features/processing/: processing.dart
lib/features/processing/data/: bm25_service.dart  document_text_extractor.dart  embedding_service.dart  pdf_processor.dart
lib/features/processing/domain/: processing_state.dart
lib/features/processing/presentation/: document_ready_screen.dart  processing_screen.dart
lib/features/processing/providers/: processing_provider.dart
lib/features/reader/: reader.dart
lib/features/reader/presentation/: pdf_reader_screen.dart  reader_screen.dart
lib/features/settings/: settings.dart
lib/features/settings/presentation/: download_required_screen.dart  model_info_screen.dart  settings_screen.dart
lib/features/settings/providers/: settings_provider.dart
lib/features/setup/: setup.dart
lib/features/setup/data/: model_downloader.dart  model_import_service.dart  setup_repository.dart
lib/features/setup/domain/: setup_state.dart
lib/features/setup/presentation/: download_progress_screen.dart  download_required_screen.dart  model_setup_screen.dart  privacy_screen.dart  setup_complete_screen.dart  splash_screen.dart
lib/features/setup/providers/: setup_provider.dart
lib/features/voice/: voice.dart
lib/features/voice/data/: stt_service.dart  tts_service.dart
lib/features/voice/domain/: voice_state.dart
lib/features/voice/presentation/: voice_overlay_screen.dart
lib/routing/: app_router.dart
scripts/: generate_icon.py  setup_llama.sh
test/: widget_test.dart
test/core/database/: chat_messages_table_test.dart  documents_table_test.dart  question_cache_table_test.dart
test/core/services/: storage_service_test.dart
test/routing/: app_routes_test.dart
(+17 files in other folders)
